# recursive-descent-ast-interpreter

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.py  estimators.py  geometry.py  main.py  plotting.py  sensor.py  simulation.py
include/: ast.hpp  builtins.hpp  environment.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp
include/util/: cli.hpp  file_io.hpp  value_format.hpp
src/: builtins.cpp  environment.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp
src/util/: cli.cpp  file_io.cpp
tests/: test_lexer.cpp
tests/data/: test10_print_builtin.txt  test11_short_circuit.txt  test12_expired_closure.txt  test13_nil_and_equality.txt  test2_arithmatic.txt  test3_function.txt  test4_if_else.txt  test5_while_loop.txt  test6_functions_calls.txt  test7_precedence.txt  test8_nested_calls.txt  test9_error_recovery.txt
tests/interpreter/: interpreter_printer.cpp  interpreter_printer.hpp  interpreter_test.cpp
tests/lexer/: lexer_test.cpp  test_lexer.cpp
tests/parser/: ast_printer.cpp  ast_printer.hpp  parser_test.cpp
